tools/tree-sitter-kio/grammar.js
    source_file: ($) => choice(
      $.package_file, seq($.signature_file, repeat($._unit)), $.dependency_file, $.lock_file,
      prec.right(seq(
        repeat(choice($.module_decl, $.import_decl, $.incomplete_import_decl)),
        optional(seq($._body_unit, repeat($._unit))),
      )),
    ),
    _unit: ($) => choice($.module_decl, $.import_decl, $._body_unit),
    _body_unit: ($) => choice($._declaration, $._raw_unit),
    _identifier_like: ($) => choice($.uppercase_identifier, $._value_identifier_like),
    keyword_type: ($) => kw("type"),
    function_definition: ($) =>
      choice(
        seq($.fn_decl_head, $._editor_boundary),
        prec.dynamic(1, seq($.fn_decl_head, $.expression_block)),
      ),

    expression_block: ($) => choice($._complete_expression_block, $.incomplete_expression_block),
    _complete_expression_block: ($) => seq(
      $.bracket_lbrace, repeat($.separator_semicolon),
      repeat(seq(choice($.let_statement, $.row_let_stmt, $._expression), repeat1($.separator_semicolon))),
      optional($._expression), repeat($.unowned_function), $.bracket_rbrace,
    ),
    type_alias_decl_head: ($) => seq($._type_alias_decl_body, $.separator_semicolon),
    _type_alias_decl_body: ($) =>
      prec.dynamic(20, prec.right(
        seq(
          optional($._visibility_modifier),
          $.keyword_type,
          alias($.uppercase_identifier, $.entity_name_type),
          optional($.type_param_list),
          seq(
            $.operator_builtin, // `=`
            $._type,
          ),
        ),
      )),

    label_forward_decl: ($) =>
      prec.dynamic(20, seq(
        optional($._visibility_modifier),
        $.keyword_type,
        $.bracket_lbrace,
        alias($.lowercase_identifier, $.entity_name_label),
        $.bracket_rbrace,
        alias("=", $.operator_builtin),
        $.bracket_lbrace,
        $.label_path,
        $.bracket_rbrace,
        $.separator_semicolon,
      )),
    label_path: ($) =>
      seq(
        repeat(seq(alias($._identifier_like, $.identifier), $.separator_dot)),
        alias($._identifier_like, $.entity_name_label),
      ),
    keyword_pub: ($) => kw("pub"),
    keyword_fn: ($) => kw("fn"),
    _visibility_modifier: ($) => prec.dynamic(3, seq($.keyword_pub, optional(seq($.bracket_lparen, $.module_path, $.bracket_rparen)))),

    _fn_decl_modifiers: ($) =>
      prec(3, choice(
        $._visibility_modifier,
        $.keyword_pure,
        seq($._visibility_modifier, $.keyword_pure),
        seq($.keyword_pure, $._visibility_modifier),
      )),
    fn_decl_head: ($) =>
      prec.dynamic(20, prec.right(
        seq(
          optional($._fn_decl_modifiers),
          $.keyword_fn,
          alias($._identifier_like, $.entity_name_function),
          $.fn_signature,
          optional($._fn_return_type),
        ),
      )),

    _fn_return_type: ($) =>
      prec.right(seq($.operator_arrow_type, $._type)),
    fn_signature: ($) =>
      prec.dynamic(30, prec.right(repeat1(choice($.type_param_group, $.value_param_group)))),

    value_param_group: ($) =>
      seq(
        $.bracket_lparen,
        optional(sep1($.value_param_binder, $.separator_comma)),
        $.bracket_rparen,
      ),

    separator_semicolon: ($) => ";",
    separator_dot: ($) => ".",
    comment_doc: ($) =>
      token(seq("///", optional(seq(/[ \t\r]/, /[^\n]*/)))),

    comment_line: ($) =>
      token(seq("//", optional(seq(/[ \t\r]/, /[^\n]*/)))),
    bracket_lparen: ($) => "(",
    bracket_rparen: ($) => ")",
    bracket_lbrace: ($) => "{",
    bracket_rbrace: ($) => "}",
    operator_arrow_type: ($) => "->",
    operator_builtin: ($) => choice("&", "|", "=", ":", "!"),
    identifier: ($) => token(choice(
      /[A-Za-z][A-Za-z0-9_]*/,
      /_+[A-Za-z0-9][A-Za-z0-9_]*/,
    )),
  },
});
